add email address check

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,9 @@ code {
   text-align: center;
   visibility: hidden;
 }
+
+#invalid-email {
+  color: red;
+  text-align: center;
+  visibility: hidden;
+}
