clean up render function for MapWithPlaceholder

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,9 @@ code {
   text-align: center;
   visibility: hidden;
 }
+
+#overpass-error {
+  color: red;
+  text-align: center;
+  visibility: hidden;
+}
