fix price reporting

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-#payment-form {
+#plaque-payment-form {
   max-width: 550px;
   min-width: 300px;
   max-height: min-content;
