--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@
 }
 
 .leaflet-container { width: 66%; height: 20vh; margin-left: auto; margin-right: auto;}
+
+.SUCCESS {
+  color: green;
+}
+
+.FAILURE {
+  color: red;
+}
